# audio-diarization-transcript

./: .gitignore  README.md  convert_m4a_to_wav.py  main.py  mini.py  pyproject.toml  win_dll_setup.py
scripts/: setup-windows.ps1
