[project]
name = "audio-diarization-transcript"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "accelerate>=1.6.0",
    "huggingface-hub>=0.30.2",
    "punctuators==0.0.5",
    "pyannote-audio>=4.0.4",
    "pydub>=0.25.1",
    "soundfile>=0.13.1",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = ["ruff>=0.11.7"]
